[gd_scene load_steps=2 format=2]

[ext_resource path="res://createDataset.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ContentWindow" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.200012

[node name="Panel" type="Panel" parent="ContentWindow"]
anchor_top = 0.08
anchor_right = 0.25
anchor_bottom = 1.0
margin_right = -0.424011
margin_bottom = -0.200012

[node name="LawOrReference" type="OptionButton" parent="ContentWindow/Panel"]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.09
margin_top = 0.0567513
margin_right = -0.0871582
margin_bottom = 0.185326
text = "Law"
items = [ "Law", null, false, 0, null, "Reference", null, false, 1, null, "Law & Reference", null, false, 2, null ]
selected = 0

[node name="Unique" type="OptionButton" parent="ContentWindow/Panel"]
anchor_left = 0.1
anchor_top = 0.13
anchor_right = 0.9
anchor_bottom = 0.17
margin_right = -0.0184021
margin_bottom = -0.181335
text = "unique"
items = [ "unique", null, false, 0, null, "non-unique", null, false, 1, null ]
selected = 0

[node name="Type" type="OptionButton" parent="ContentWindow/Panel"]
anchor_left = 0.1
anchor_top = 0.21
anchor_right = 0.9
anchor_bottom = 0.25
text = "Function"
items = [ "Int", null, false, 0, null, "String", null, false, 1, null, "Class", null, false, 2, null, "Function", null, false, 3, null ]
selected = 3

[node name="Name" type="TextEdit" parent="ContentWindow/Panel"]
anchor_left = 0.1
anchor_top = 0.29
anchor_right = 0.9
anchor_bottom = 0.33
custom_constants/line_spacing = 3
text = "Name of Item"

[node name="Save" type="Button" parent="ContentWindow/Panel"]
anchor_left = 0.1
anchor_top = 0.37
anchor_right = 0.9
anchor_bottom = 0.41
margin_left = -0.0687523
margin_top = -0.0979767
margin_right = -0.0184021
margin_bottom = 0.0305939
text = "Save"

[node name="Tree" type="Tree" parent="ContentWindow"]
anchor_left = 0.25
anchor_top = 0.08
anchor_right = 0.557
anchor_bottom = 1.0
margin_top = -0.0160027
margin_right = -0.368042
margin_bottom = -0.200012

[node name="AddItem" type="Button" parent="ContentWindow"]
anchor_left = 0.025
anchor_top = 0.027
anchor_right = 0.129
anchor_bottom = 0.06
margin_left = 0.4
margin_top = -0.2054
margin_right = -11.096
margin_bottom = -0.012001
text = "Add Item"

[node name="RemoveItem" type="Button" parent="ContentWindow"]
anchor_left = 0.025
anchor_top = 0.027
anchor_right = 0.129
anchor_bottom = 0.06
margin_left = 113.4
margin_top = -0.2054
margin_right = 101.904
margin_bottom = -0.012001
text = "Remove Item"

[node name="Proceed" type="Button" parent="ContentWindow"]
anchor_left = 0.876
anchor_top = 0.027
anchor_right = 0.979
anchor_bottom = 0.06
margin_left = -0.0240479
margin_top = -0.0053997
margin_right = 0.503967
margin_bottom = 0.188
text = "Proceed"

[node name="TabContainer" type="TabContainer" parent="ContentWindow"]
margin_left = 589.0
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Laws" type="Panel" parent="ContentWindow/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Templates" type="Panel" parent="ContentWindow/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="pressed" from="ContentWindow/Panel/Save" to="." method="_on_Save_pressed"]
[connection signal="item_selected" from="ContentWindow/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="ContentWindow/AddItem" to="." method="_on_AddItem_pressed"]
[connection signal="pressed" from="ContentWindow/RemoveItem" to="." method="_on_RemoveItem_pressed"]
